export const snapshot = {};

snapshot[`build a site with eta 1`] = `3`;

snapshot[`build a site with eta 2`] = `
{
  formats: [
    {
      includesPath: undefined,
      key: ".tmpl.ts",
      pageType: "page",
    },
    {
      includesPath: undefined,
      key: ".tmpl.js",
      pageType: "page",
    },
    {
      includesPath: undefined,
      key: ".tmpl.json",
      pageType: "page",
    },
    {
      includesPath: undefined,
      key: ".json",
      pageType: undefined,
    },
    {
      includesPath: undefined,
      key: ".md",
      pageType: "page",
    },
    {
      includesPath: undefined,
      key: ".js",
      pageType: undefined,
    },
    {
      includesPath: undefined,
      key: ".ts",
      pageType: undefined,
    },
    {
      includesPath: "_includes",
      key: ".njk",
      pageType: "page",
    },
    {
      includesPath: undefined,
      key: ".yaml",
      pageType: "page",
    },
    {
      includesPath: undefined,
      key: ".yml",
      pageType: "page",
    },
    {
      includesPath: "_includes",
      key: ".pug",
      pageType: "page",
    },
  ],
}
`;

snapshot[`build a site with eta 3`] = `
{
  content: '<html class="no-js" lang="en"><head><meta charset="utf-8"/><title>Pug example</title></head><body><h1>Home</h1></body></html>',
  data: {
    content: "extends /layout.pug\\nblock content\\n  h1 Home\\n",
    date: 1970-01-01T00:00:00.000Z,
    paginate: [GeneratorFunction: paginate],
    search: Search {},
    tags: [
    ],
    title: "Pug example",
    url: "/extends/",
  },
  dest: {
    ext: ".html",
    path: "/extends/index",
  },
  src: {
    ext: ".pug",
    path: "/extends",
  },
}
`;

snapshot[`build a site with eta 4`] = `
{
  content: '<html class="no-js" lang="en"><head><meta charset="utf-8"/><title>Markdown content</title></head><body><h1>This is a title</h1>\\n<p>This is a paragraph</p>\\n<ul>\\n<li>Option 1</li>\\n<li>Option 2</li>\\n</ul></body></html>',
  data: {
    content: "extends ./_includes/layout.pug\\nblock content\\n  :md\\n    # This is a title\\n\\n    This is a paragraph\\n\\n    - Option 1\\n    - Option 2\\n",
    date: 1970-01-01T00:00:00.000Z,
    paginate: [GeneratorFunction: paginate],
    search: Search {},
    tags: [
    ],
    title: "Markdown content",
    url: "/article.html",
  },
  dest: {
    ext: ".html",
    path: "/article",
  },
  src: {
    ext: ".pug",
    path: "/filter",
  },
}
`;

snapshot[`build a site with eta 5`] = `
{
  content: '<html class="no-js" lang="en"><head><meta charset="utf-8"/><title>Pug example</title></head><body><header><h1>Pug example</h1></header></body></html>',
  data: {
    content: "header\\n  h1 #{title}\\n",
    date: 1970-01-01T00:00:00.000Z,
    paginate: [GeneratorFunction: paginate],
    search: Search {},
    tags: [
    ],
    title: "Pug example",
    url: "/layout/",
  },
  dest: {
    ext: ".html",
    path: "/layout/index",
  },
  src: {
    ext: ".pug",
    path: "/layout",
  },
}
`;
